# unified-ml-security-platform

./: .gitignore  ARCHITECTURE.md  ATTACKER_AND_USER_RUNBOOK.md  Dockerfile.exfil  Dockerfile.gateway  Dockerfile.kali  Dockerfile.wireshark  INTEGRATION_MAP.md  LICENSE  README.md  STATUS.md  docker-compose.prod.yml  docker-compose.redteam.yml  docker-compose.yml  gateway_server.py  pyproject.toml  requirements.txt  spec_service.py
.github/workflows/: ci.yml
attacks/: __init__.py  attack_catalog.py  attack_client.py  attack_v19_detector.py
benchmarks/: portfolio_measure.py
docs/: ATTACK_V19_DETECTION_CONTRACT.md  INDUSTRY_RESEARCH_BENCHMARK.md  MEASUREMENT_REPORT_2026-07-21.md  PORTFOLIO_HONESTY_REPORT.md
evidence/: portfolio_measurement_2026-07-21.json
products/adv_ml/: Dockerfile  README.md  requirements.txt  server.py
products/adv_ml/tests/: test_adv_ml_health.py
products/dataset_poison/: Dockerfile  README.md  requirements.txt  server.py
products/dataset_poison/tests/: test_dataset_poison_health.py
products/hf_scanner/: Dockerfile  README.md  requirements.txt  server.py
products/hf_scanner/tests/: test_hf_scanner_health.py
products/llm_redteam/: Dockerfile  README.md  requirements.txt  server.py
products/llm_redteam/tests/: test_llm_redteam_health.py
products/mcp_gateway/: Dockerfile  README.md  requirements.txt  server.py
products/model_privacy/: Dockerfile  README.md  requirements.txt  server.py
products/pulsenet/: Dockerfile  README.md  requirements.txt  server.py
tests/: test_attack_v19_detector.py
(+3 files in other folders)
